import { describe, expect, it } from 'vitest';
import {
  createCirclePairs,
  createGamesFromPairs,
  createPlayers,
  rotatePlayers,
  generateSchedule,
} from './generateSchedule';
import { validateSchedule } from './validateSchedule';

describe('createGamesFromPairs', () => {
  describe('for 8 players', () => {
    it('creates pairs and games for 8 players in a circle pairing format', () => {
      // example:
      // 1  2
      // 8  3
      // 7  4
      // 6  5
      //
      // Game 1: 1&8 vs 2&3
      // Game 2: 7&6 vs 4&5

      const players = createPlayers(8);
      expect(players).toEqual([1, 2, 3, 4, 5, 6, 7, 8]);

      const pairs = createCirclePairs(players);
      expect(pairs).toEqual([
        { left: 1, right: 2 },
        { left: 8, right: 3 },
        { left: 7, right: 4 },
        { left: 6, right: 5 },
      ]);

      // create games
      const games = createGamesFromPairs(pairs);
      expect(games).toEqual([
        {
          court: 1,
          team1: [1, 2],
          team2: [8, 3],
        },
        {
          court: 2,
          team1: [7, 4],
          team2: [6, 5],
        },
      ]);
    });
  });

  describe('for 7 players', () => {
    it('creates pairs and games with a bye', () => {
      // example:
      // 1  2
      // 7  3
      // 6  4
      // 5  B
      //
      // Game 1: 1&7 vs 2&3
      // Game 2: 6&5 vs 4&null

      const players = createPlayers(7);
      // expect(players).toEqual([1, 2, 3, 4, 5, 6, 7]);

      const pairs = createCirclePairs(players);
      expect(pairs).toEqual([
        { left: 1, right: 2 },
        { left: 7, right: 3 },
        { left: 6, right: 4 },
        { left: 5, right: null },
      ]);

      // create games
      const games = createGamesFromPairs(pairs);
      expect(games).toEqual([
        {
          court: 1,
          team1: [1, 2],
          team2: [7, 3],
        },
        {
          court: 2,
          team1: [6, 4],
          team2: [5, null],
        },
      ]);
    });
  });

  describe('for 6 players', () => {
    it('creates pairs and games for 4 of the players at a time', () => {
      // example:
      // 1  2
      // 6  3
      // 5  4
      // B  B
      //
      // Game 1: 1&6 vs 2&3
      // Game 2: 5&4 vs null&null

      const players = createPlayers(6);
      // expect(players).toEqual([1, 2, 3, 4, 5, 6]);

      const pairs = createCirclePairs(players);
      expect(pairs).toEqual([
        { left: 1, right: 2 },
        { left: 6, right: 3 },
        { left: 5, right: 4 },
        { left: null, right: null },
      ]);

      // create games
      const games = createGamesFromPairs(pairs);
      expect(games).toEqual([
        {
          court: 1,
          team1: [1, 2],
          team2: [6, 3],
        },
        {
          court: 2,
          team1: [5, 4],
          team2: [null, null],
        },
      ]);
    });
  });

  describe('for 5 players', () => {
    it('creates pairs and games for 4 of the players at a time', () => {
      // example:
      // 1  2
      // 5  3
      // 4  B
      // B  B
      //
      // Game 1: 1&5 vs 2&3
      // Game 2: null&null vs 4&null

      const players = createPlayers(5);
      // expect(players).toEqual([1, 2, 3, 4, 5, null]);

      const pairs = createCirclePairs(players);
      expect(pairs).toEqual([
        { left: 1, right: 2 },
        { left: 5, right: 3 },
        { left: null, right: 4 },
        { left: null, right: null },
      ]);

      // create games
      const games = createGamesFromPairs(pairs);
      expect(games).toEqual([
        {
          court: 1,
          team1: [1, 2],
          team2: [5, 3],
        },
        {
          court: 2,
          team1: [null, 4],
          team2: [null, null],
        },
      ]);
    });
  });
});

describe('rotatePlayers', () => {
  it('rotates players and generates correct pairs and games for the next round', () => {
    // 1  3
    // 2  4
    // 8  5
    // 7  6

    // Game 1: 1&2 vs 3&4
    // Game 2: 8&7 vs 5&6

    const players = createPlayers(8);
    const rotatedPlayers = rotatePlayers(players);

    const pairs = createCirclePairs(rotatedPlayers);
    expect(pairs).toEqual([
      { left: 1, right: 3 },
      { left: 2, right: 4 },
      { left: 8, right: 5 },
      { left: 7, right: 6 },
    ]);

    const games = createGamesFromPairs(pairs);
    expect(games).toEqual([
      {
        court: 1,
        team1: [1, 3],
        team2: [2, 4],
      },
      {
        court: 2,
        team1: [8, 5],
        team2: [7, 6],
      },
    ]);
  });
});

describe('generateSchedule', () => {
  describe('for 8 players', () => {
    it('generates a full schedule for 8 players over 7 rounds', () => {
      const schedule = generateSchedule(8);
      expect(schedule.games.length).toBe(7);
      expect(schedule).toMatchSnapshot();
    });

    it('makes sure everyone plays with everyone else', () => {
      const schedule = generateSchedule(8);
      expect(validateSchedule(schedule)).toMatchSnapshot();
    });
  });

  it('generates a schedule for 4 players over 3 rounds', () => {
    const schedule = generateSchedule(4);
    expect(schedule.games.length).toBe(3);
    expect(schedule).toMatchSnapshot();
  });

  describe('for 5 players', () => {
    it('generates a schedule for 6 players over 5 rounds because one the players gets a bye each round', () => {
      const schedule = generateSchedule(5);
      expect(schedule.games.length).toBe(4);
      expect(schedule).toMatchSnapshot();
    });
  });

  describe('for 7 players', () => {
    it('generates a schedule for 7 players over 6 rounds because one the players gets a bye each round', () => {
      const schedule = generateSchedule(7);
      expect(schedule.games.length).toBe(6);
      expect(schedule).toMatchSnapshot();
    });
  });
});
