// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSchedule > for 5 players > generates a schedule for 6 players over 5 rounds because one the players gets a bye each round 1`] = `
{
  "games": [
    [
      {
        "court": 1,
        "team1": [
          1,
          2,
        ],
        "team2": [
          5,
          3,
        ],
      },
      {
        "court": 2,
        "team1": [
          null,
          4,
        ],
        "team2": [
          null,
          null,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          3,
        ],
        "team2": [
          2,
          4,
        ],
      },
      {
        "court": 2,
        "team1": [
          null,
          5,
        ],
        "team2": [
          null,
          null,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          4,
        ],
        "team2": [
          3,
          5,
        ],
      },
      {
        "court": 2,
        "team1": [
          null,
          2,
        ],
        "team2": [
          null,
          null,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          5,
        ],
        "team2": [
          4,
          2,
        ],
      },
      {
        "court": 2,
        "team1": [
          null,
          3,
        ],
        "team2": [
          null,
          null,
        ],
      },
    ],
  ],
}
`;

exports[`generateSchedule > for 7 players > generates a schedule for 7 players over 6 rounds because one the players gets a bye each round 1`] = `
{
  "games": [
    [
      {
        "court": 1,
        "team1": [
          1,
          2,
        ],
        "team2": [
          7,
          3,
        ],
      },
      {
        "court": 2,
        "team1": [
          6,
          4,
        ],
        "team2": [
          5,
          null,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          3,
        ],
        "team2": [
          2,
          4,
        ],
      },
      {
        "court": 2,
        "team1": [
          7,
          5,
        ],
        "team2": [
          6,
          null,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          4,
        ],
        "team2": [
          3,
          5,
        ],
      },
      {
        "court": 2,
        "team1": [
          2,
          6,
        ],
        "team2": [
          7,
          null,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          5,
        ],
        "team2": [
          4,
          6,
        ],
      },
      {
        "court": 2,
        "team1": [
          3,
          7,
        ],
        "team2": [
          2,
          null,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          6,
        ],
        "team2": [
          5,
          7,
        ],
      },
      {
        "court": 2,
        "team1": [
          4,
          2,
        ],
        "team2": [
          3,
          null,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          7,
        ],
        "team2": [
          6,
          2,
        ],
      },
      {
        "court": 2,
        "team1": [
          5,
          3,
        ],
        "team2": [
          4,
          null,
        ],
      },
    ],
  ],
}
`;

exports[`generateSchedule > for 8 players > generates a full schedule for 8 players over 7 rounds 1`] = `
{
  "games": [
    [
      {
        "court": 1,
        "team1": [
          1,
          2,
        ],
        "team2": [
          8,
          3,
        ],
      },
      {
        "court": 2,
        "team1": [
          7,
          4,
        ],
        "team2": [
          6,
          5,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          3,
        ],
        "team2": [
          2,
          4,
        ],
      },
      {
        "court": 2,
        "team1": [
          8,
          5,
        ],
        "team2": [
          7,
          6,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          4,
        ],
        "team2": [
          3,
          5,
        ],
      },
      {
        "court": 2,
        "team1": [
          2,
          6,
        ],
        "team2": [
          8,
          7,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          5,
        ],
        "team2": [
          4,
          6,
        ],
      },
      {
        "court": 2,
        "team1": [
          3,
          7,
        ],
        "team2": [
          2,
          8,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          6,
        ],
        "team2": [
          5,
          7,
        ],
      },
      {
        "court": 2,
        "team1": [
          4,
          8,
        ],
        "team2": [
          3,
          2,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          7,
        ],
        "team2": [
          6,
          8,
        ],
      },
      {
        "court": 2,
        "team1": [
          5,
          2,
        ],
        "team2": [
          4,
          3,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          8,
        ],
        "team2": [
          7,
          2,
        ],
      },
      {
        "court": 2,
        "team1": [
          6,
          3,
        ],
        "team2": [
          5,
          4,
        ],
      },
    ],
  ],
}
`;

exports[`generateSchedule > for 8 players > makes sure everyone plays with everyone else 1`] = `
{
  "1": {
    "opponents": {
      "2": 2,
      "3": 2,
      "4": 2,
      "5": 2,
      "6": 2,
      "7": 2,
      "8": 2,
    },
    "partners": {
      "2": 1,
      "3": 1,
      "4": 1,
      "5": 1,
      "6": 1,
      "7": 1,
      "8": 1,
    },
  },
  "2": {
    "opponents": {
      "1": 2,
      "3": 4,
      "4": 2,
      "7": 2,
      "8": 4,
    },
    "partners": {
      "1": 1,
      "3": 1,
      "4": 1,
      "5": 1,
      "6": 1,
      "7": 1,
      "8": 1,
    },
  },
  "3": {
    "opponents": {
      "1": 2,
      "2": 4,
      "4": 4,
      "5": 2,
      "8": 2,
    },
    "partners": {
      "1": 1,
      "2": 1,
      "4": 1,
      "5": 1,
      "6": 1,
      "7": 1,
      "8": 1,
    },
  },
  "4": {
    "opponents": {
      "1": 2,
      "2": 2,
      "3": 4,
      "5": 4,
      "6": 2,
    },
    "partners": {
      "1": 1,
      "2": 1,
      "3": 1,
      "5": 1,
      "6": 1,
      "7": 1,
      "8": 1,
    },
  },
  "5": {
    "opponents": {
      "1": 2,
      "3": 2,
      "4": 4,
      "6": 4,
      "7": 2,
    },
    "partners": {
      "1": 1,
      "2": 1,
      "3": 1,
      "4": 1,
      "6": 1,
      "7": 1,
      "8": 1,
    },
  },
  "6": {
    "opponents": {
      "1": 2,
      "4": 2,
      "5": 4,
      "7": 4,
      "8": 2,
    },
    "partners": {
      "1": 1,
      "2": 1,
      "3": 1,
      "4": 1,
      "5": 1,
      "7": 1,
      "8": 1,
    },
  },
  "7": {
    "opponents": {
      "1": 2,
      "2": 2,
      "5": 2,
      "6": 4,
      "8": 4,
    },
    "partners": {
      "1": 1,
      "2": 1,
      "3": 1,
      "4": 1,
      "5": 1,
      "6": 1,
      "8": 1,
    },
  },
  "8": {
    "opponents": {
      "1": 2,
      "2": 4,
      "3": 2,
      "6": 2,
      "7": 4,
    },
    "partners": {
      "1": 1,
      "2": 1,
      "3": 1,
      "4": 1,
      "5": 1,
      "6": 1,
      "7": 1,
    },
  },
}
`;

exports[`generateSchedule > generates a full schedule for 8 players over 7 rounds 1`] = `
{
  "games": [
    [
      {
        "court": 1,
        "team1": [
          1,
          2,
        ],
        "team2": [
          8,
          3,
        ],
      },
      {
        "court": 2,
        "team1": [
          7,
          4,
        ],
        "team2": [
          6,
          5,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          3,
        ],
        "team2": [
          2,
          4,
        ],
      },
      {
        "court": 2,
        "team1": [
          8,
          5,
        ],
        "team2": [
          7,
          6,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          4,
        ],
        "team2": [
          3,
          5,
        ],
      },
      {
        "court": 2,
        "team1": [
          2,
          6,
        ],
        "team2": [
          8,
          7,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          5,
        ],
        "team2": [
          4,
          6,
        ],
      },
      {
        "court": 2,
        "team1": [
          3,
          7,
        ],
        "team2": [
          2,
          8,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          6,
        ],
        "team2": [
          5,
          7,
        ],
      },
      {
        "court": 2,
        "team1": [
          4,
          8,
        ],
        "team2": [
          3,
          2,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          7,
        ],
        "team2": [
          6,
          8,
        ],
      },
      {
        "court": 2,
        "team1": [
          5,
          2,
        ],
        "team2": [
          4,
          3,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          8,
        ],
        "team2": [
          7,
          2,
        ],
      },
      {
        "court": 2,
        "team1": [
          6,
          3,
        ],
        "team2": [
          5,
          4,
        ],
      },
    ],
  ],
}
`;

exports[`generateSchedule > generates a schedule for 4 players over 3 rounds 1`] = `
{
  "games": [
    [
      {
        "court": 1,
        "team1": [
          1,
          2,
        ],
        "team2": [
          4,
          3,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          3,
        ],
        "team2": [
          2,
          4,
        ],
      },
    ],
    [
      {
        "court": 1,
        "team1": [
          1,
          4,
        ],
        "team2": [
          3,
          2,
        ],
      },
    ],
  ],
}
`;
